src/styles/globals.scss
@import "./theme.scss";

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.home_container {
  @include flex_container(column, center, center);
  background: $main_gradient no-repeat fixed;
  width: 100%;
  min-height: 85vh;
  padding: 0 2rem;

  .section {
    color: $primary_color;
    width: 100%;
    height: 100%;

    .slider {
      color: $secondary_color;
      // margin: 0 -1rem;
    }

    .text_container {
      .title {
        @include text_styling($text_lg, 0.625rem, $primary_color);
        font-weight: normal;
        padding-left: 0.5rem;
      }

      .subtitle {
        @include text_styling($text_sm, 0.938rem, $gray_light_color);
        margin: 1.6rem 0;
        font-weight: normal;
        max-width: 90%;
        padding-left: 1rem;

        .black {
          font-weight: bold;
        }
      }

      .list {
        @include text_styling($text_xs, 2px, $primary_color);
        ol {
          list-style-type: none;
          padding-top: 1rem;
        }
        li {
          padding: 0.2rem;
        }
      }
    }
    .stats {
      @include flex_container(row, space-between, center);
    }
  }

  // Desktop Home
  @media only screen and (min-width: 768px) {
    min-height: 90vh;
    .section {
      @include flex_container(row-reverse, space-evenly, center);
      max-width: 100%;

      .slider {
        max-width: 50%;
        height: 100%;
      }

      .text_container {
        max-width: 50%;
        height: 100%;
        @include flex_container(column, flex-start, flex-start);
        padding-left: 8rem;

        .title {
          @include text_styling(3.5rem, 0.625rem, $primary_color);
          font-weight: 500;
          max-width: 80%;
          margin-bottom: auto;
        }

        .subtitle {
          @include text_styling(1.8rem, 0.938rem, $gray_light_color);
          font-weight: normal;
          max-width: 90%;

          .black {
            font-weight: bold;
          }
        }

        .list {
          @include text_styling($text_md, 2px, $primary_color);
          ol {
            list-style-type: none;
            padding-top: 2rem;
            padding-bottom: 4rem;
          }
          li {
            padding: 0.2rem;
          }
        }
        .stats {
          padding: 2rem 0;
        }
      }
    }
  }
}

// WORK SECTION

.work_section {
  width: 100%;
  min-height: 85vh;

  .background_nuts {
    background-image: url("../../public/assets/background.png");
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    height: 100px;
    transform: scaleY(-1);
  }

  .container {
    @include flex_container(column, center, center);
    gap: 1.2rem;
    margin: 0 2rem;

    .first_section {
      @include flex_container(column, flex-start, flex-start);
      gap: 1.2rem;
      margin-top: -2.2rem;

      .title_work {
        @include text_styling($text_lg, 10px, $accent_color);
        text-shadow: 2px 2px 4px rgba(36, 35, 35, 0.5);
      }

      .subtitle {
        @include text_styling($text_xxs, 15px, $secondary_color);
        font-weight: normal;

        line-height: 1.6;
      }
      .list {
        @include text_styling($text_sm, 20px, $accent_medium);

        font-weight: bold;

        line-height: 2;
        ol {
          list-style-type: none;

          li {
            padding-bottom: 1rem;
            background-image: $accent_gradient;
            -webkit-background-clip: text;
            background-clip: text;
            color: transparent;
          }
        }
      }
    }

    .image_section {
      @include flex_container(column, center, center);
      gap: 2rem;

      .title_image {
        @include text_styling(1.2rem, 0, $accent_light);
        text-align: center;
      }
      .link {
        color: $search_color;
        margin-left: auto;
        padding-right: 2rem 2rem 0 0;
        font-size: 0.9rem;
      }
      .desktop_image {
        display: none;
      }
      .mobile_image {
        display: block;
      }
    }
  }

  .image_graph {
    position: relative;
    margin-top: 2rem;
  }
  .image_graph .secondary_title {
    @include text_styling($text_xl, 20px, transparent);
    background-image: $accent_gradient;
    -webkit-background-clip: text;
    background-clip: text;
    position: absolute;
    top: 0;
    right: 0;
    margin: 0 2rem;
    z-index: 2;
  }
  .button_container {
    @include flex_container(column, center, center);
    margin: 2rem 0;
    .info_button {
      @include text_styling(0.8rem, 0, $primary_color);
      background: $main_gradient;
      cursor: pointer;
      padding: 0.6rem;
      border: none;
      border-radius: 8px;
      font-weight: bold;
    }
  }
  .second_background_nuts {
    background-image: url("../../public/assets/background.png");
    background-position: bottom;
    background-repeat: no-repeat;
    height: 100px;
    margin-top: -4rem;
  }

  // Desktop Work
  @media only screen and (min-width: 768px) {
    min-height: 100vh;
    .container {
      @include flex_container(row, space-between, center);
      margin: 0 15rem;

      .first_section {
        gap: 2rem;

        .title_work {
          @include text_styling(2.5rem, 10px, $accent_color);
          text-shadow: 2px 2px 4px rgba(36, 35, 35, 0.5);
          margin-top: -2rem;
        }

        .subtitle {
          @include text_styling(1.8rem, 15px, $secondary_color);
          font-weight: normal;
          width: 75%;
          line-height: 1.6;
        }
        .list {
          @include text_styling($text_md, 20px, $accent_medium);

          font-weight: bold;

          line-height: 2;
          ol {
            list-style-type: none;

            li {
              padding-bottom: 1rem;
              background-image: $accent_gradient;
              -webkit-background-clip: text;
              background-clip: text;
              color: transparent;
            }
          }
        }
      }
      .image_section {
        .title_image {
          @include text_styling(2rem, 0, $accent_light);
        }
        .link {
          padding-left: 10rem;
        }
        .mobile_image {
          display: none;
        }
        .desktop_image {
          display: block;
        }
      }
    }
  }
}

